Fixing mobile header spacing

--- a/interview_db_vue/css/custom.scss
+++ b/interview_db_vue/css/custom.scss
@@ -139,6 +139,10 @@ h6 {
     display: inline;
     font-size: 50px;
   }
+
+  .husky-header{
+    justify-content: space-between;
+  }
 }
 
 @media(min-width: 550px)
